<resources>
    <string name="app_name">Classic Games</string>
    <string name="usuario" translatable="false">usuario</string>
    <string name="title_activity_hangman">Hangman</string>
    <string name="btnContinuar">Continue</string>
    <string name="txtInicio">Welcome!,\ncome in and enjoy the different games we offer.</string>
    <string name="txtTicTacToe">Tic Tac Toe</string>
    <string name="txtAhorcado">Hangman Game</string>
    <string name="ahorcado">Hangman</string>
    <string name="txtPresentacion">We have several mini-games to pass the time with.</string>
    <string name="txtPuntuacion">Compete against other players and your friends to become the first of all!</string>
    <string name="btnRegistrar">Sign Up</string>
    <string name="txtRegistro">Sign Up\n and \n ¡Start playing!</string>
    <string name="introNombre">Name</string>
    <string name="introEmail">Email</string>
    <string name="introPass">Password</string>
    <string name="txtImgBoton">Button</string>
    <string name="txtPass">Minimum of 8 characters</string>
    <string name="Idioma1">English</string>
    <string name="Idioma2">Spanish</string>
    <string name="celda">Cell</string>
    <string name="cuenta">Account</string>
    <string name="btnJugar">Play</string>
    <string name="EmailIncorrecto">Invalid Email Address</string>
    <string name="MinPass">Minimum 8 Character Password</string>
    <string name="ToastRegistro">Completed registration</string>
    <string name="AlertError">An error occurred while registering</string>
    <string name="btnDialogAceptar">Accept</string>
    <string name="btnLogin">Sign In</string>
    <string name="requerido">Required</string>
    <string name="ToastInicioSesion">LogIn successfully</string>
    <string name="puntuacion">ScoreBoard</string>
    <string name="ajustes">Settings</string>
    <string name="menuPrincipal">Main Menu</string>
    <string name="empate">Draw</string>
    <string name="derrota">Defeat</string>
    <string name="victoria">Victory!</string>
    <string name="introRespuesta">Enter your guess</string>
    <string name="btnComprobar">Check it</string>
    <string name="txtLetraFallada">Letters failed: </string>
    <string name="salir">Exit</string>
    <string name="txtJugarDeNuevo">Play Again</string>
    <string name="btnCerrarSesion">Log out</string>
    <string name="txtUsuario">Username: </string>
    <string name="txtEmail">Email: </string>
    <string name="txtErrorNombre">A name has not been entered</string>
    <string name="txtFecha">Last time played:</string>
    <string name="txtPuntuacionTotal">Total Score:</string>
    <string name="txtVersion">Application Version</string>
    <string name="puntos">points</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>