<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_graph"
    app:startDestination="@id/juegosFragment">

    <fragment
        android:id="@+id/juegosFragment"
        android:name="com.alvaro.proyectofinal.Menus.JuegosFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_juegos" />

    <fragment
        android:id="@+id/cerrarsesionFragment"
        android:name="com.alvaro.proyectofinal.Menus.CerrarsesionFragment"
        android:label="@string/cuenta"
        tools:layout="@layout/fragment_cerrarsesion" />
    <fragment
        android:id="@+id/ajustesFragment"
        android:name="com.alvaro.proyectofinal.Menus.AjustesFragment"
        android:label="@string/ajustes"
        tools:layout="@layout/fragment_ajustes" />
    <activity
        android:id="@+id/rankingActivity"
        android:name="com.alvaro.proyectofinal.Menus.RankingActivity"
        android:label="@string/puntuacion"
        tools:layout="@layout/activity_ranking" />
</navigation>