<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding.IdiomaFragment">


    <TextView
        android:id="@+id/txtIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/RBIdioma1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnContIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnContinuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RBIdioma2" />

    <RadioButton
        android:id="@+id/RBIdioma1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Idioma1"
        app:layout_constraintBottom_toTopOf="@+id/RBIdioma2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdioma" />

    <RadioButton
        android:id="@+id/RBIdioma2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Idioma2"
        app:layout_constraintBottom_toTopOf="@+id/btnContIdioma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RBIdioma1" />
</androidx.constraintlayout.widget.ConstraintLayout>